Add a shutdown hook which dumps diagnostic data when Recaf closed with a non-standard exit code